Add build of java runtime with jlink