@@ -10,6 +10,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <failchat.distribution.directory>${project.build.directory}/failchat-v${project.version}</failchat.distribution.directory>
 
         <kotlin.version>1.3.72</kotlin.version>
         <kotlinx-coroutines.version>1.3.4</kotlinx-coroutines.version>
@@ -17,12 +18,12 @@
         <kodein.version>6.5.5</kodein.version>
         <jackson.version>2.11.4</jackson.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
         <commons-configuration.version>2.1.1</commons-configuration.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <java-websocket.version>1.3.8</java-websocket.version>
         <socket.io-client.version>1.0.0</socket.io-client.version>
         <okhttp.version>3.14.9</okhttp.version>
-        <logback.version>1.2.3</logback.version>
         <pircbotx.version>2.1</pircbotx.version>
         <youtube.version>v3-rev183-1.22.0</youtube.version>
         <kotlin-either.version>2.0.1</kotlin-either.version>
@@ -146,12 +147,24 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
             <version>${commons-configuration.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <!-- Required for commons-configuration2 -->
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>${commons-beanutils.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -280,6 +293,12 @@
             <artifactId>wiremock-jre8</artifactId>
             <version>2.27.2</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.kotest</groupId>
@@ -366,7 +385,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/target/failchat-v${project.version}</outputDirectory>
+                            <outputDirectory>${failchat.distribution.directory}</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${basedir}/src/main/external-resources</directory>
@@ -434,12 +453,11 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
                 <configuration>
-                    <finalName>failchat-${project.version}-without-dependencies</finalName>
-                    <outputDirectory>${basedir}/target</outputDirectory>
+                    <finalName>failchat-${project.version}</finalName>
+                    <outputDirectory>${failchat.distribution.directory}</outputDirectory>
                     <archive>
                         <manifest>
                             <mainClass>failchat.FailchatMainKt</mainClass>
-                            <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
                     <includes>
@@ -453,29 +471,108 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>failchat.FailchatMainKt</Main-Class>
+                                    </manifestEntries>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.properties.PropertiesTransformer">
+                                    <resource>META-INF/io.netty.versions.properties</resource>
+                                    <ordinalKey>ordinal</ordinalKey>
+                                </transformer>
+                            </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/MANIFEST.MF</exclude>
+                                        <exclude>META-INF/DEPENDENCIES</exclude>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>LICENSE*.txt</exclude>
+                                        <exclude>about.html</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>delete-app-runtime-before-jlink</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <filesets>
+                                <fileset>
+                                    <directory>${failchat.distribution.directory}/runtime</directory>
+                                </fileset>
+                            </filesets>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <id>executable-jar</id>
+                        <id>build-app-runtime</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>exec</goal>
                         </goals>
-                        <configuration>
-                            <finalName>failchat-${project.version}</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <archive>
-                                <manifest>
-                                    <mainClass>failchat.FailchatMainKt</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <outputDirectory>${project.build.directory}/failchat-v${project.version}</outputDirectory>
-                        </configuration>
                     </execution>
+                </executions>
+                <configuration>
+                    <executable>jlink</executable>
+                    <arguments>
+                        <argument>--no-header-files</argument>
+                        <argument>--no-man-pages</argument>
+                        <argument>--compress=2</argument>
+                        <argument>--strip-debug</argument>
+                        <argument>--add-modules</argument>
+                        <!--TODO dynamically generate the required list of modules-->
+                        <!--for now to get the module list you should run:-->
+                        <!--jdeps - -list-deps target/failchat-v2.6.4-SNAPSHOT/failchat-2.6.4-SNAPSHOT.jar-->
+                        <!--(remove space between '-', thanks to xml)-->
+                        <argument>java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.security.jgss,java.sql,java.xml,javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.web,jdk.attach,jdk.jdi,jdk.jsobject,jdk.unsupported,jdk.crypto.ec</argument>
+                        <argument>--output</argument>
+                        <argument>${failchat.distribution.directory}/runtime</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
                     <execution>
                         <id>zip</id>
                         <phase>package</phase>
@@ -486,7 +583,7 @@
                             <finalName>failchat-v${project.version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                             <archiverConfig>
-                                <compress>false</compress>
+                                <compress>true</compress>
                             </archiverConfig>
                             <descriptors>
                                 <descriptor>src/main/assembly/zip.xml</descriptor>
